@@ -782,7 +782,17 @@
                   <tr>
                       <td colspan="1" rowspan="1"
       valign="top" align="left">
-          1.7.0 up to the current svn trunk
+          1.7.0 up to 1.7.1
+      </td>
+                          <td colspan="1" rowspan="1"
+      valign="top" align="left">
+          1.3
+      </td>
+      </tr>
+                  <tr>
+                      <td colspan="1" rowspan="1"
+      valign="top" align="left">
+          current svn trunk
       </td>
                           <td colspan="1" rowspan="1"
       valign="top" align="left">
