@@ -263,7 +263,12 @@
           </tr>
           
           <tr>
-            <td>1.7.0 up to the current svn trunk</td>
+            <td>1.7.0 up to 1.7.1</td>
+            <td>1.3</td>
+          </tr>
+
+          <tr>
+            <td>current svn trunk</td>
             <td>1.3</td>
           </tr>
         </table>
